# DeepDraw

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  ruff.toml
.chroma_db/: chroma.sqlite3
.claude/PRPs/plans/: core-3-agents-llm.plan.md  document-parsing-toolchain.plan.md  enterprise-rag-memory.plan.md
.claude/PRPs/plans/completed/: infrastructure-bootstrap.plan.md
.claude/PRPs/prds/: deepdraw-dfm-platform.prd.md
.claude/PRPs/reports/: document-parsing-toolchain-report.md  infrastructure-bootstrap-report.md
.claude/reviews/: phase1-bootstrap-review.md  phase2-parsing-toolchain-review.md
docs/: original-requirement.md
src/deepdraw/: cli.py  graph.py  llm.py  prompts.py  state.py
src/deepdraw/agents/: bom_generator.py  chief_verifier.py  drawing_auditor.py  process_recommender.py  spec_interpreter.py
src/deepdraw/prompts/: __init__.py  bom_generator.md  chief_verifier.md  drawing_auditor.md  process_recommender.md  spec_interpreter.md
src/deepdraw/tools/: README.md  dxf.py  file_detect.py  ingest.py  mcp_server.py  mcp_tools.py  pdf.py  rag.py  seed.py
tests/: conftest.py  test_agents.py  test_graph.py  test_state.py  test_tools_dxf.py  test_tools_mcp.py  test_tools_pdf.py  test_tools_rag.py
