[project]
name = "deepdraw"
version = "0.1.0"
description = "DFM-Copilot Squad — 钣金/机加工图纸审核与工艺决策多 Agent 系统"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.2.6",
    "langchain-core>=1.0,<2",
    "langgraph-checkpoint>=2,<5",
    "langgraph-checkpoint-sqlite==3.1.0",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "langgraph-cli[inmem]>=0.2",
]

[project.scripts]
deepdraw = "deepdraw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepdraw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
